--- a/app.css
+++ b/app.css
@@ -120,3 +120,9 @@ dialog ul {
 dialog p {
   margin: 0.5em 0 1em;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
