--- a/app.css
+++ b/app.css
@@ -38,7 +38,6 @@ header {
   z-index: 9999;
 }
 
-/* ---------- main page styling ---------- */
 main {
   animation: fadeIn 0.4s;
   padding: 137px 0 0;
@@ -72,8 +71,6 @@ main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
 }
-
-/* ---------- grid item styling ---------- */
 
 .grid-item {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
@@ -125,4 +122,11 @@ dialog p {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+.dialog-close-button {
+  background-color: transparent;
+  border: 2px solid black;
+  font-size: 1.5em;
+  color: black;
+  cursor: pointer;
 }
