--- a/app.css
+++ b/app.css
@@ -37,6 +37,15 @@ header {
   right: 0;
   z-index: 9999;
 }
+footer {
+  background-color: red;
+  color: black;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
 
 main {
   animation: fadeIn 0.4s;
